charts/factory/manuela-staging/templates/anomaly-detection/iot-anomaly-detection-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anomaly-detection
  namespace: manuela-staging-messaging
  labels:
    component: serving
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: anomaly-detection-predictor-anomaly-detection
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
